<resources>
    <string name="app_name">Flicky</string>
    <string name="title_search">Search</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_library">Library</string>

    <!-- SearchFragment -->
    <string name="movie_search_hint">Search movie title</string>
    <string name="menu_item_search">Search</string>

    <!-- Search ResultDetail -->
    <string name="result_detail_activity_title">Détails</string>
    <string name="plot_title">Plot :</string>
    <string name="add_movie_library">Add to library</string>
    <string name="add_library_success">Movie added to your library !</string>
    <plurals name="number_of_genres">
        <item quantity="one">Genre</item>
        <item quantity="other">Genres</item>
    </plurals>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="connection">Connexion</string>
    <string name="register">Créer le compte</string>

    <!-- Library -->
    <string name="cast">Cast :</string>

    <!-- General purpose -->
    <string name="undo">Undo</string>
</resources>
